--- a/_modules/qiskit_quantuminspire/hybrid/hybrid_job.html
+++ b/_modules/qiskit_quantuminspire/hybrid/hybrid_job.html
@@ -300,7 +300,9 @@
 
         <span class="k">for</span> <span class="n">circuit_data</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">circuits_run_data</span><span class="p">:</span>
             <span class="n">transpiled_circuit</span> <span class="o">=</span> <span class="n">transpile</span><span class="p">(</span><span class="n">circuit_data</span><span class="o">.</span><span class="n">circuit</span><span class="p">,</span> <span class="n">backend</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">backend</span><span class="p">())</span>
-            <span class="n">result</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_quantum_interface</span><span class="o">.</span><span class="n">execute_circuit</span><span class="p">(</span><span class="n">cqasm</span><span class="o">.</span><span class="n">dumps</span><span class="p">(</span><span class="n">transpiled_circuit</span><span class="p">),</span> <span class="n">options</span><span class="p">[</span><span class="s2">&quot;shots&quot;</span><span class="p">])</span>
+            <span class="n">result</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_quantum_interface</span><span class="o">.</span><span class="n">execute_circuit</span><span class="p">(</span>
+                <span class="n">cqasm</span><span class="o">.</span><span class="n">dumps</span><span class="p">(</span><span class="n">transpiled_circuit</span><span class="p">),</span> <span class="n">options</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;shots&quot;</span><span class="p">),</span> <span class="n">raw_data_enabled</span><span class="o">=</span><span class="n">options</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;memory&quot;</span><span class="p">)</span>
+            <span class="p">)</span>
 
             <span class="c1"># Store retrieved results in format expected by Job</span>
             <span class="n">circuit_data</span><span class="o">.</span><span class="n">results</span> <span class="o">=</span> <span class="n">RawJobResult</span><span class="p">(</span>
@@ -312,7 +314,7 @@
                 <span class="n">shots_requested</span><span class="o">=</span><span class="n">result</span><span class="o">.</span><span class="n">shots_requested</span><span class="p">,</span>
                 <span class="n">shots_done</span><span class="o">=</span><span class="n">result</span><span class="o">.</span><span class="n">shots_done</span><span class="p">,</span>
                 <span class="n">results</span><span class="o">=</span><span class="n">result</span><span class="o">.</span><span class="n">results</span><span class="p">,</span>
-                <span class="n">raw_data</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
+                <span class="n">raw_data</span><span class="o">=</span><span class="n">result</span><span class="o">.</span><span class="n">raw_data</span><span class="p">,</span>
             <span class="p">)</span></div>
 
 
