--- a/pr-preview/pr-120/_modules/qiskit_quantuminspire/qi_jobs.html
+++ b/pr-preview/pr-120/_modules/qiskit_quantuminspire/qi_jobs.html
@@ -617,18 +617,14 @@
 
         <span class="n">jobs</span><span class="p">:</span> <span class="n">List</span><span class="p">[</span><span class="n">Job</span><span class="p">]</span> <span class="o">=</span> <span class="k">await</span> <span class="n">asyncio</span><span class="o">.</span><span class="n">gather</span><span class="p">(</span><span class="o">*</span><span class="n">job_tasks</span><span class="p">)</span>
 
-        <span class="n">failed_jobs</span> <span class="o">=</span> <span class="p">[</span><span class="n">job</span> <span class="k">for</span> <span class="n">job</span> <span class="ow">in</span> <span class="n">jobs</span> <span class="k">if</span> <span class="n">job</span><span class="o">.</span><span class="n">status</span> <span class="o">==</span> <span class="n">QIJobStatus</span><span class="o">.</span><span class="n">FAILED</span><span class="p">]</span>
-        <span class="n">failed_job_id_to_message</span> <span class="o">=</span> <span class="p">{</span><span class="n">job</span><span class="o">.</span><span class="n">id</span><span class="p">:</span> <span class="n">job</span><span class="o">.</span><span class="n">message</span> <span class="k">for</span> <span class="n">job</span> <span class="ow">in</span> <span class="n">failed_jobs</span><span class="p">}</span>
-
-        <span class="n">jobs_with_no_results</span> <span class="o">=</span> <span class="nb">list</span><span class="p">(</span><span class="nb">set</span><span class="p">(</span><span class="n">jobs</span><span class="p">)</span> <span class="o">-</span> <span class="nb">set</span><span class="p">(</span><span class="n">failed_jobs</span><span class="p">))</span>
-        <span class="n">job_with_no_results_id_to_message</span> <span class="o">=</span> <span class="p">{</span><span class="n">job</span><span class="o">.</span><span class="n">id</span><span class="p">:</span> <span class="s2">&quot;No Results&quot;</span> <span class="k">for</span> <span class="n">job</span> <span class="ow">in</span> <span class="n">jobs_with_no_results</span><span class="p">}</span>
+        <span class="n">failed_job_id_to_message</span> <span class="o">=</span> <span class="p">{</span>
+            <span class="n">job</span><span class="o">.</span><span class="n">id</span><span class="p">:</span> <span class="n">job</span><span class="o">.</span><span class="n">message</span> <span class="k">if</span> <span class="n">job</span><span class="o">.</span><span class="n">status</span> <span class="o">==</span> <span class="n">QIJobStatus</span><span class="o">.</span><span class="n">FAILED</span> <span class="k">else</span> <span class="s2">&quot;No Results&quot;</span> <span class="k">for</span> <span class="n">job</span> <span class="ow">in</span> <span class="n">jobs</span>
+        <span class="p">}</span>
 
         <span class="k">for</span> <span class="n">circuit_data</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">circuits_run_data</span><span class="p">:</span>
 
             <span class="k">if</span> <span class="n">circuit_data</span><span class="o">.</span><span class="n">job_id</span> <span class="ow">in</span> <span class="n">failed_job_id_to_message</span><span class="p">:</span>
                 <span class="n">circuit_data</span><span class="o">.</span><span class="n">system_message</span> <span class="o">=</span> <span class="n">failed_job_id_to_message</span><span class="p">[</span><span class="n">circuit_data</span><span class="o">.</span><span class="n">job_id</span><span class="p">]</span>
-            <span class="k">elif</span> <span class="n">circuit_data</span><span class="o">.</span><span class="n">job_id</span> <span class="ow">in</span> <span class="n">job_with_no_results_id_to_message</span><span class="p">:</span>
-                <span class="n">circuit_data</span><span class="o">.</span><span class="n">system_message</span> <span class="o">=</span> <span class="n">job_with_no_results_id_to_message</span><span class="p">[</span><span class="n">circuit_data</span><span class="o">.</span><span class="n">job_id</span><span class="p">]</span>
 
 <div class="viewcode-block" id="QIJob.status">
 <a class="viewcode-back" href="../../api/qiskit_quantuminspire.html#qiskit_quantuminspire.qi_jobs.QIJob.status">[docs]</a>
