--- a/genindex.html
+++ b/genindex.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta name="color-scheme" content="light dark"><link rel="index" title="Index" href="#" /><link rel="search" title="Search" href="search.html" />
 
-    <!-- Generated with Sphinx 8.1.3 and Furo 2024.08.06 --><title>Index - Qiskit-QuantumInspire 0.3.0 documentation</title>
+    <!-- Generated with Sphinx 8.1.3 and Furo 2024.08.06 --><title>Index - Qiskit-QuantumInspire 0.7.1 documentation</title>
 <link rel="stylesheet" type="text/css" href="_static/styles/furo.css?v=354aac6f" />
     <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=fa44fd50" />
     <link rel="stylesheet" type="text/css" href="_static/styles/qiskit-sphinx-theme.css?v=8ff9dcb6" />
@@ -158,7 +158,7 @@
       </label>
     </div>
     <div class="header-center">
-      <a href="index.html"><div class="brand">Qiskit-QuantumInspire 0.3.0 documentation</div></a>
+      <a href="index.html"><div class="brand">Qiskit-QuantumInspire 0.7.1 documentation</div></a>
     </div>
     <div class="header-right">
       <div class="theme-toggle-container theme-toggle-header">
@@ -182,7 +182,7 @@
       <div class="sidebar-sticky"><a class="sidebar-brand" href="index.html">
   
   
-  <span class="sidebar-brand-text">Qiskit-QuantumInspire 0.3.0 documentation</span>
+  <span class="sidebar-brand-text">Qiskit-QuantumInspire 0.7.1 documentation</span>
   
 </a>
 <form class="sidebar-search-container" method="get" action="search.html" role="search">
@@ -254,7 +254,7 @@
           
 <section class="genindex-section">
   <h1 id="index">Index</h1>
-  <div class="genindex-jumpbox"><a href="#A"><strong>A</strong></a> | <a href="#B"><strong>B</strong></a> | <a href="#C"><strong>C</strong></a> | <a href="#D"><strong>D</strong></a> | <a href="#G"><strong>G</strong></a> | <a href="#I"><strong>I</strong></a> | <a href="#J"><strong>J</strong></a> | <a href="#M"><strong>M</strong></a> | <a href="#O"><strong>O</strong></a> | <a href="#Q"><strong>Q</strong></a> | <a href="#R"><strong>R</strong></a> | <a href="#S"><strong>S</strong></a> | <a href="#T"><strong>T</strong></a></div>
+  <div class="genindex-jumpbox"><a href="#A"><strong>A</strong></a> | <a href="#B"><strong>B</strong></a> | <a href="#C"><strong>C</strong></a> | <a href="#D"><strong>D</strong></a> | <a href="#E"><strong>E</strong></a> | <a href="#G"><strong>G</strong></a> | <a href="#I"><strong>I</strong></a> | <a href="#J"><strong>J</strong></a> | <a href="#M"><strong>M</strong></a> | <a href="#O"><strong>O</strong></a> | <a href="#Q"><strong>Q</strong></a> | <a href="#R"><strong>R</strong></a> | <a href="#S"><strong>S</strong></a> | <a href="#T"><strong>T</strong></a></div>
 </section>
 <section id="A" class="genindex-section">
   <h2>A</h2>
@@ -309,6 +309,16 @@
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="api/qiskit_quantuminspire.html#qiskit_quantuminspire.cqasm.dumps">dumps() (in module qiskit_quantuminspire.cqasm)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="E" class="genindex-section">
+  <h2>E</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="api/qiskit_quantuminspire.html#qiskit_quantuminspire.qi_jobs.ExperimentFailedWarning">ExperimentFailedWarning</a>
 </li>
     </ul></td>
   </tr></table>
@@ -571,6 +581,8 @@
 </li>
         <li><a href="api/qiskit_quantuminspire.mapping.html#qiskit_quantuminspire.mapping.instruction_mapping.InstructionMapping.supported_qiskit_instructions">supported_qiskit_instructions() (qiskit_quantuminspire.mapping.instruction_mapping.InstructionMapping method)</a>
 </li>
+        <li><a href="api/qiskit_quantuminspire.html#qiskit_quantuminspire.qi_jobs.CircuitExecutionData.system_message">system_message (qiskit_quantuminspire.qi_jobs.CircuitExecutionData attribute)</a>
+</li>
     </ul></td>
   </tr></table>
 </section>
@@ -617,7 +629,7 @@
       
     </aside>
   </div>
-</div><script src="_static/documentation_options.js?v=e259d695"></script>
+</div><script src="_static/documentation_options.js?v=5a057da9"></script>
     <script src="_static/doctools.js?v=9bcbadda"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="_static/scripts/furo.js?v=5fa4622c"></script>
