--- a/pr-preview/pr-132/_modules/qiskit_quantuminspire/qi_jobs.html
+++ b/pr-preview/pr-132/_modules/qiskit_quantuminspire/qi_jobs.html
@@ -374,6 +374,7 @@
             <span class="n">circuit_name</span> <span class="o">=</span> <span class="n">circuit_data</span><span class="o">.</span><span class="n">circuit</span><span class="o">.</span><span class="n">name</span>
 
             <span class="k">if</span> <span class="n">qi_result</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
+                <span class="k">assert</span> <span class="n">circuit_data</span><span class="o">.</span><span class="n">system_message</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span>
                 <span class="n">failed_experiments</span><span class="p">[</span><span class="n">circuit_name</span><span class="p">]</span> <span class="o">=</span> <span class="n">circuit_data</span><span class="o">.</span><span class="n">system_message</span>
                 <span class="n">trace_id</span> <span class="o">=</span> <span class="n">circuit_data</span><span class="o">.</span><span class="n">system_message</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;trace_id&quot;</span><span class="p">,</span> <span class="s2">&quot;&quot;</span><span class="p">)</span>
                 <span class="n">error_message</span> <span class="o">=</span> <span class="n">circuit_data</span><span class="o">.</span><span class="n">system_message</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;message&quot;</span><span class="p">,</span> <span class="s2">&quot;&quot;</span><span class="p">)</span>
@@ -620,10 +621,6 @@
         <span class="n">job_tasks</span> <span class="o">=</span> <span class="p">[</span><span class="n">jobs_api</span><span class="o">.</span><span class="n">read_job_jobs_id_get</span><span class="p">(</span><span class="nb">id</span><span class="o">=</span><span class="n">_id</span><span class="p">)</span> <span class="k">for</span> <span class="n">_id</span> <span class="ow">in</span> <span class="n">job_ids_to_check</span><span class="p">]</span>
 
         <span class="n">jobs</span><span class="p">:</span> <span class="n">List</span><span class="p">[</span><span class="n">Job</span><span class="p">]</span> <span class="o">=</span> <span class="k">await</span> <span class="n">asyncio</span><span class="o">.</span><span class="n">gather</span><span class="p">(</span><span class="o">*</span><span class="n">job_tasks</span><span class="p">)</span>
-
-        <span class="n">failed_job_id_to_message</span> <span class="o">=</span> <span class="p">{</span>
-            <span class="n">job</span><span class="o">.</span><span class="n">id</span><span class="p">:</span> <span class="n">job</span><span class="o">.</span><span class="n">message</span> <span class="k">if</span> <span class="n">job</span><span class="o">.</span><span class="n">status</span> <span class="o">==</span> <span class="n">QIJobStatus</span><span class="o">.</span><span class="n">FAILED</span> <span class="k">else</span> <span class="s2">&quot;No Results&quot;</span> <span class="k">for</span> <span class="n">job</span> <span class="ow">in</span> <span class="n">jobs</span>
-        <span class="p">}</span>
 
         <span class="n">failed_job_id_to_message</span> <span class="o">=</span> <span class="p">{</span>
             <span class="n">job</span><span class="o">.</span><span class="n">id</span><span class="p">:</span> <span class="p">{</span>
