--- a/_modules/qiskit_quantuminspire/qi_jobs.html
+++ b/_modules/qiskit_quantuminspire/qi_jobs.html
@@ -258,7 +258,7 @@
 <span class="kn">from</span> <span class="nn">dataclasses</span> <span class="kn">import</span> <span class="n">dataclass</span>
 <span class="kn">from</span> <span class="nn">functools</span> <span class="kn">import</span> <span class="n">cache</span>
 <span class="kn">from</span> <span class="nn">pathlib</span> <span class="kn">import</span> <span class="n">Path</span>
-<span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">Any</span><span class="p">,</span> <span class="n">List</span><span class="p">,</span> <span class="n">Optional</span><span class="p">,</span> <span class="n">Union</span><span class="p">,</span> <span class="n">cast</span>
+<span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">Any</span><span class="p">,</span> <span class="n">Dict</span><span class="p">,</span> <span class="n">List</span><span class="p">,</span> <span class="n">Optional</span><span class="p">,</span> <span class="n">Union</span><span class="p">,</span> <span class="n">cast</span>
 
 <span class="kn">from</span> <span class="nn">colorama</span> <span class="kn">import</span> <span class="n">Fore</span><span class="p">,</span> <span class="n">Style</span>
 <span class="kn">from</span> <span class="nn">compute_api_client</span> <span class="kn">import</span> <span class="p">(</span>
@@ -326,7 +326,7 @@
     <span class="n">circuit</span><span class="p">:</span> <span class="n">QuantumCircuit</span>
     <span class="n">job_id</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="nb">int</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span>
     <span class="n">results</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">RawJobResult</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span>
-    <span class="n">system_message</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="nb">str</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span></div>
+    <span class="n">system_message</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="nb">str</span><span class="p">]]</span> <span class="o">=</span> <span class="kc">None</span></div>
 
 
 
@@ -374,9 +374,12 @@
             <span class="n">circuit_name</span> <span class="o">=</span> <span class="n">circuit_data</span><span class="o">.</span><span class="n">circuit</span><span class="o">.</span><span class="n">name</span>
 
             <span class="k">if</span> <span class="n">qi_result</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
+                <span class="k">assert</span> <span class="n">circuit_data</span><span class="o">.</span><span class="n">system_message</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span>
                 <span class="n">failed_experiments</span><span class="p">[</span><span class="n">circuit_name</span><span class="p">]</span> <span class="o">=</span> <span class="n">circuit_data</span><span class="o">.</span><span class="n">system_message</span>
+                <span class="n">trace_id</span> <span class="o">=</span> <span class="n">circuit_data</span><span class="o">.</span><span class="n">system_message</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;trace_id&quot;</span><span class="p">,</span> <span class="s2">&quot;&quot;</span><span class="p">)</span>
+                <span class="n">error_message</span> <span class="o">=</span> <span class="n">circuit_data</span><span class="o">.</span><span class="n">system_message</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;message&quot;</span><span class="p">,</span> <span class="s2">&quot;&quot;</span><span class="p">)</span>
                 <span class="n">experiment_result</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_create_empty_experiment_result</span><span class="p">(</span>
-                    <span class="n">circuit_name</span><span class="o">=</span><span class="n">circuit_name</span><span class="p">,</span> <span class="n">system_message</span><span class="o">=</span><span class="n">circuit_data</span><span class="o">.</span><span class="n">system_message</span>
+                    <span class="n">circuit_name</span><span class="o">=</span><span class="n">circuit_name</span><span class="p">,</span> <span class="n">trace_id</span><span class="o">=</span><span class="n">trace_id</span><span class="p">,</span> <span class="n">message</span><span class="o">=</span><span class="n">error_message</span>
                 <span class="p">)</span>
                 <span class="n">results</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">experiment_result</span><span class="p">)</span>
                 <span class="k">continue</span>
@@ -432,14 +435,16 @@
         <span class="p">)</span>
 
     <span class="nd">@staticmethod</span>
-    <span class="k">def</span> <span class="nf">_create_empty_experiment_result</span><span class="p">(</span><span class="n">circuit_name</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">system_message</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="nb">str</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="n">ExperimentResult</span><span class="p">:</span>
+    <span class="k">def</span> <span class="nf">_create_empty_experiment_result</span><span class="p">(</span>
+        <span class="n">circuit_name</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">trace_id</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="nb">str</span><span class="p">],</span> <span class="n">message</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="nb">str</span><span class="p">]</span>
+    <span class="p">)</span> <span class="o">-&gt;</span> <span class="n">ExperimentResult</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Create an empty ExperimentResult instance.&quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="n">ExperimentResult</span><span class="p">(</span>
             <span class="n">shots</span><span class="o">=</span><span class="mi">0</span><span class="p">,</span>
             <span class="n">success</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
             <span class="n">data</span><span class="o">=</span><span class="n">ExperimentResultData</span><span class="p">(</span><span class="n">counts</span><span class="o">=</span><span class="p">{}),</span>
             <span class="n">header</span><span class="o">=</span><span class="n">QobjExperimentHeader</span><span class="p">(</span><span class="n">name</span><span class="o">=</span><span class="n">circuit_name</span><span class="p">),</span>
-            <span class="n">status</span><span class="o">=</span><span class="sa">f</span><span class="s2">&quot;Experiment failed. System Message: </span><span class="si">{</span><span class="n">system_message</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">,</span>
+            <span class="n">status</span><span class="o">=</span><span class="sa">f</span><span class="s2">&quot;Experiment failed. Trace_id: </span><span class="si">{</span><span class="n">trace_id</span><span class="si">}</span><span class="s2">, System Message: </span><span class="si">{</span><span class="n">message</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">,</span>
         <span class="p">)</span></div>
 
 
@@ -618,7 +623,11 @@
         <span class="n">jobs</span><span class="p">:</span> <span class="n">List</span><span class="p">[</span><span class="n">Job</span><span class="p">]</span> <span class="o">=</span> <span class="k">await</span> <span class="n">asyncio</span><span class="o">.</span><span class="n">gather</span><span class="p">(</span><span class="o">*</span><span class="n">job_tasks</span><span class="p">)</span>
 
         <span class="n">failed_job_id_to_message</span> <span class="o">=</span> <span class="p">{</span>
-            <span class="n">job</span><span class="o">.</span><span class="n">id</span><span class="p">:</span> <span class="n">job</span><span class="o">.</span><span class="n">message</span> <span class="k">if</span> <span class="n">job</span><span class="o">.</span><span class="n">status</span> <span class="o">==</span> <span class="n">QIJobStatus</span><span class="o">.</span><span class="n">FAILED</span> <span class="k">else</span> <span class="s2">&quot;No Results&quot;</span> <span class="k">for</span> <span class="n">job</span> <span class="ow">in</span> <span class="n">jobs</span>
+            <span class="n">job</span><span class="o">.</span><span class="n">id</span><span class="p">:</span> <span class="p">{</span>
+                <span class="s2">&quot;message&quot;</span><span class="p">:</span> <span class="n">job</span><span class="o">.</span><span class="n">message</span> <span class="k">if</span> <span class="n">job</span><span class="o">.</span><span class="n">status</span> <span class="o">==</span> <span class="n">QIJobStatus</span><span class="o">.</span><span class="n">FAILED</span> <span class="k">else</span> <span class="s2">&quot;No Results&quot;</span><span class="p">,</span>
+                <span class="s2">&quot;trace_id&quot;</span><span class="p">:</span> <span class="n">job</span><span class="o">.</span><span class="n">trace_id</span><span class="p">,</span>
+            <span class="p">}</span>
+            <span class="k">for</span> <span class="n">job</span> <span class="ow">in</span> <span class="n">jobs</span>
         <span class="p">}</span>
 
         <span class="k">for</span> <span class="n">circuit_data</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">circuits_run_data</span><span class="p">:</span>
