--- a/_modules/qiskit_quantuminspire/qi_jobs.html
+++ b/_modules/qiskit_quantuminspire/qi_jobs.html
@@ -372,6 +372,10 @@
         <span class="k">for</span> <span class="n">idx</span><span class="p">,</span> <span class="n">circuit_data</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">circuits_run_data</span><span class="p">):</span>
             <span class="n">qi_result</span> <span class="o">=</span> <span class="n">circuit_data</span><span class="o">.</span><span class="n">results</span>
             <span class="n">circuit_name</span> <span class="o">=</span> <span class="n">circuit_data</span><span class="o">.</span><span class="n">circuit</span><span class="o">.</span><span class="n">name</span>
+            <span class="n">num_qubits</span> <span class="o">=</span> <span class="n">circuit_data</span><span class="o">.</span><span class="n">circuit</span><span class="o">.</span><span class="n">num_qubits</span>
+            <span class="n">num_clbits</span> <span class="o">=</span> <span class="n">circuit_data</span><span class="o">.</span><span class="n">circuit</span><span class="o">.</span><span class="n">num_clbits</span>
+            <span class="n">num_bits</span> <span class="o">=</span> <span class="n">num_qubits</span> <span class="k">if</span> <span class="p">(</span><span class="n">num_clbits</span> <span class="o">==</span> <span class="mi">0</span><span class="p">)</span> <span class="k">else</span> <span class="n">num_clbits</span>
+            <span class="n">exp_header</span> <span class="o">=</span> <span class="n">QobjExperimentHeader</span><span class="p">(</span><span class="n">name</span><span class="o">=</span><span class="n">circuit_name</span><span class="p">,</span> <span class="n">memory_slots</span><span class="o">=</span><span class="n">num_bits</span><span class="p">)</span>
 
             <span class="k">if</span> <span class="n">qi_result</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
                 <span class="k">assert</span> <span class="n">circuit_data</span><span class="o">.</span><span class="n">system_message</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span>
@@ -379,13 +383,13 @@
                 <span class="n">trace_id</span> <span class="o">=</span> <span class="n">circuit_data</span><span class="o">.</span><span class="n">system_message</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;trace_id&quot;</span><span class="p">,</span> <span class="s2">&quot;&quot;</span><span class="p">)</span>
                 <span class="n">error_message</span> <span class="o">=</span> <span class="n">circuit_data</span><span class="o">.</span><span class="n">system_message</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;message&quot;</span><span class="p">,</span> <span class="s2">&quot;&quot;</span><span class="p">)</span>
                 <span class="n">experiment_result</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_create_empty_experiment_result</span><span class="p">(</span>
-                    <span class="n">circuit_name</span><span class="o">=</span><span class="n">circuit_name</span><span class="p">,</span> <span class="n">trace_id</span><span class="o">=</span><span class="n">trace_id</span><span class="p">,</span> <span class="n">message</span><span class="o">=</span><span class="n">error_message</span>
+                    <span class="n">exp_header</span><span class="o">=</span><span class="n">exp_header</span><span class="p">,</span> <span class="n">trace_id</span><span class="o">=</span><span class="n">trace_id</span><span class="p">,</span> <span class="n">message</span><span class="o">=</span><span class="n">error_message</span>
                 <span class="p">)</span>
                 <span class="n">results</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">experiment_result</span><span class="p">)</span>
                 <span class="k">continue</span>
 
             <span class="n">experiment_result</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_create_experiment_result</span><span class="p">(</span>
-                <span class="n">circuit_name</span><span class="o">=</span><span class="n">circuit_name</span><span class="p">,</span>
+                <span class="n">exp_header</span><span class="o">=</span><span class="n">exp_header</span><span class="p">,</span>
                 <span class="n">result</span><span class="o">=</span><span class="n">qi_result</span><span class="p">,</span>
             <span class="p">)</span>
             <span class="n">results</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">experiment_result</span><span class="p">)</span>
@@ -415,7 +419,7 @@
 
     <span class="nd">@staticmethod</span>
     <span class="k">def</span> <span class="nf">_create_experiment_result</span><span class="p">(</span>
-        <span class="n">circuit_name</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span>
+        <span class="n">exp_header</span><span class="p">:</span> <span class="n">QobjExperimentHeader</span><span class="p">,</span>
         <span class="n">result</span><span class="p">:</span> <span class="n">RawJobResult</span><span class="p">,</span>
     <span class="p">)</span> <span class="o">-&gt;</span> <span class="n">ExperimentResult</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Create an ExperimentResult instance based on RawJobResult parameters.&quot;&quot;&quot;</span>
@@ -430,20 +434,20 @@
             <span class="n">shots</span><span class="o">=</span><span class="n">result</span><span class="o">.</span><span class="n">shots_done</span><span class="p">,</span>
             <span class="n">success</span><span class="o">=</span><span class="n">result</span><span class="o">.</span><span class="n">shots_done</span> <span class="o">&gt;</span> <span class="mi">0</span><span class="p">,</span>
             <span class="n">data</span><span class="o">=</span><span class="n">experiment_data</span><span class="p">,</span>
-            <span class="n">header</span><span class="o">=</span><span class="n">QobjExperimentHeader</span><span class="p">(</span><span class="n">name</span><span class="o">=</span><span class="n">circuit_name</span><span class="p">),</span>
+            <span class="n">header</span><span class="o">=</span><span class="n">exp_header</span><span class="p">,</span>
             <span class="n">status</span><span class="o">=</span><span class="s2">&quot;Experiment successful&quot;</span><span class="p">,</span>
         <span class="p">)</span>
 
     <span class="nd">@staticmethod</span>
     <span class="k">def</span> <span class="nf">_create_empty_experiment_result</span><span class="p">(</span>
-        <span class="n">circuit_name</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">trace_id</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="nb">str</span><span class="p">],</span> <span class="n">message</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="nb">str</span><span class="p">]</span>
+        <span class="n">exp_header</span><span class="p">:</span> <span class="n">QobjExperimentHeader</span><span class="p">,</span> <span class="n">trace_id</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="nb">str</span><span class="p">],</span> <span class="n">message</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="nb">str</span><span class="p">]</span>
     <span class="p">)</span> <span class="o">-&gt;</span> <span class="n">ExperimentResult</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Create an empty ExperimentResult instance.&quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="n">ExperimentResult</span><span class="p">(</span>
             <span class="n">shots</span><span class="o">=</span><span class="mi">0</span><span class="p">,</span>
             <span class="n">success</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
             <span class="n">data</span><span class="o">=</span><span class="n">ExperimentResultData</span><span class="p">(</span><span class="n">counts</span><span class="o">=</span><span class="p">{}),</span>
-            <span class="n">header</span><span class="o">=</span><span class="n">QobjExperimentHeader</span><span class="p">(</span><span class="n">name</span><span class="o">=</span><span class="n">circuit_name</span><span class="p">),</span>
+            <span class="n">header</span><span class="o">=</span><span class="n">exp_header</span><span class="p">,</span>
             <span class="n">status</span><span class="o">=</span><span class="sa">f</span><span class="s2">&quot;Experiment failed. Trace_id: </span><span class="si">{</span><span class="n">trace_id</span><span class="si">}</span><span class="s2">, System Message: </span><span class="si">{</span><span class="n">message</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">,</span>
         <span class="p">)</span></div>
 
